
SVN
-------------------------------

XML:   Resolved issue CASTOR-1541 using contribution from Steven Dolg [stevendolg@gmx.at]
       Fixed problem with attributes named 'class' (where wrongly named getter/setter had been generated)
       Details: http://jira.codehaus.org/browse/CASTOR-1541
       (Werner - 20060909)

XML:   Resolved issue CASTOR-1545 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Added new getIterator() method to Java classes generated for J2 collection types.
       Details: http://jira.codehaus.org/browse/CASTOR-1545
       (Werner - 20060909)

XML:   Resolved issue CASTOR-1543 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fixed problem with incorrent code generation related to the use of primitive types and generics.
       Details: http://jira.codehaus.org/browse/CASTOR-1543
       (Werner - 20060909)


Version 1.0.3, Sep 7, 2006
-------------------------------

XML:   Resolved issue CASTOR-1478 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with 'staticness' of group naming scheme.
       Details: http://jira.codehaus.org/browse/CASTOR-1478
       (Werner - 20060907)
       
XML:   Resolved issue CASTOR-1537 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added HOW-TO document for mapping lists at the root level.
       Details: http://jira.codehaus.org/browse/CASTOR-1537
       (Werner - 20060904)
       
JDO:   Resolved issue CASTOR-1494 using contribution from Le Duc Bao [leducbao@gmail.com]
       Fixed inconsistencies between sql types in mapping and ddl scripts of CTF.
       Details: http://jira.codehaus.org/browse/CASTOR-1494
       (Ralf - 20060901)

XML:   Resolved issue CASTOR-1538 using contribution from Steven Dolg [stevendolg@gmx.at]
       Performance-related refactoring of XMLClassDescriptorResolverImpl.
       Details: http://jira.codehaus.org/browse/CASTOR-1538
       (Werner - 20060831)
